fix shift.css file
add h2 to shift.css and fix fondsize h1

--- a/frontend/src/styles/shift.css
+++ b/frontend/src/styles/shift.css
@@ -2,6 +2,13 @@ h1 {
     text-align: left;
     color:  #003366;
     margin-top: 50px;
+    font-size: 20px;
+}
+h2 {
+    text-align: left;
+    color:  #003366;
+    margin-top: 10px;
+    font-size: 20px;
 }
 form{
     display: flex;
